--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -458,3 +458,25 @@ commands =
       -w {envtmpdir} \
       --package-type sdist
     {envbindir}/python {toxinidir}/../../../scripts/breaking_changes_checker/detect_breaking_changes.py -t {toxinidir}
+
+
+[testenv:optional]
+skipsdist = true
+skip_install = true
+usedevelop = true
+changedir = {toxinidir}
+setenv =
+  {[testenv]setenv}
+  PROXY_URL=http://localhost:5018
+commands =
+    {envbindir}/python -m pip install {toxinidir}/../../../tools/azure-sdk-tools[build] -c {toxinidir}/../../../eng/test_constraints.txt
+    {envbindir}/python -m pip --version
+    sdk_build {posargs}
+
+    ; {envbindir}/python {toxinidir}/../../../eng/tox/create_package_and_install.py -d {envtmpdir} -p {toxinidir} -w {envtmpdir}
+
+    ; {envbindir}/python -m pip freeze
+    ; pytest \
+    ;   {[testenv]default_pytest_params} \
+    ;   {posargs} \
+    ;   {toxinidir}
