--- a/sdk/core/azure-core/pyproject.toml
+++ b/sdk/core/azure-core/pyproject.toml
@@ -3,7 +3,16 @@ mypy = true
 type_check_samples = false
 verifytypes = true
 pyright = false
-# For test environments or static checks where a check should be run by default, not explicitly disabling will enable the check.
-# pylint is enabled by default, so there is no reason for a pylint = true in every pyproject.toml.
-#
-# For newly added checks that are not enabled by default, packages should opt IN by "<check> = true".
+[[tool.azure-sdk-build.optionalenv]]
+environment = no_requests
+uninstall = ["requests"]
+install = []
+test-tools = true
+dev-reqs = true
+
+[[tool.azure-sdk-build.optionalenv]]
+environment = no_aiohttp
+uninstall = ["aiohttp"]
+install = []
+test-tools = true
+dev-reqs = true
